--- a/index.html
+++ b/index.html
@@ -6,38 +6,51 @@
     <title>Composable DataOps Platform Resources</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
             margin: 0;
             padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
+            background-color: #ffffff;
+            color: #24292f;
+            line-height: 1.5;
         }
         header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 20px;
+            background-color: #24292f;
+            color: #ffffff;
+            padding: 16px;
             text-align: center;
         }
         main {
             padding: 20px;
-            max-width: 800px;
+            max-width: 960px;
             margin: 0 auto;
         }
         h1 {
-            font-size: 2em;
+            font-size: 2rem;
             text-align: center;
+        }
+        h2 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
         }
         ul {
             list-style-type: none;
             padding: 0;
         }
         li {
-            margin: 15px 0;
+            margin: 10px 0;
+            border: 1px solid #e1e4e8;
+            border-radius: 6px;
+            padding: 12px;
+            background-color: #f6f8fa;
+            transition: background-color 0.2s;
+        }
+        li:hover {
+            background-color: #eaecef;
         }
         a {
             text-decoration: none;
-            color: #4CAF50;
-            font-size: 1.2em;
+            color: #0366d6;
+            font-size: 1rem;
         }
         a:hover {
             text-decoration: underline;
