--- a/index.html
+++ b/index.html
@@ -1,73 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Composable DataOps Platform Resources</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-            color: #24292f;
-            line-height: 1.5;
-        }
-        header {
-            background-color: #24292f;
-            color: #ffffff;
-            padding: 16px;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-            max-width: 960px;
-            margin: 0 auto;
-        }
-        h1 {
-            font-size: 2rem;
-            text-align: center;
-        }
-        h2 {
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
-            margin: 10px 0;
-            border: 1px solid #e1e4e8;
-            border-radius: 6px;
-            padding: 12px;
-            background-color: #f6f8fa;
-            transition: background-color 0.2s;
-        }
-        li:hover {
-            background-color: #eaecef;
-        }
-        a {
-            text-decoration: none;
-            color: #0366d6;
-            font-size: 1rem;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Composable Support - GitHub Discussions Forum</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    .discussion {
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      padding: 10px;
+      margin-bottom: 10px;
+      background: #fff;
+    }
+    .discussion-title {
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Composable DataOps Platform Resources</h1>
-    </header>
-    <main>
-        <h2>Explore Our Resources:</h2>
-        <ul>
-            <li><a href="https://blog.composable.ai" target="_blank">Composable Blog</a>: Stay informed on the latest features, updates, and best practices.</li>
-            <li><a href="https://support.composable.ai" target="_blank">Support Forums</a>: Browse discussions, ask questions, and get help from our community.</li>
-            <li><a href="https://dev.composable.ai" target="_blank">Composable API Docs</a>: Access detailed API documentation for integrating and extending Composable's capabilities.</li>
-        </ul>
-    </main>
+  <h1>Composable Support</h1>
+        <h2>GitHub Discussions</h2>
+    <p>Join the conversation in our GitHub Discussions support forum. Share questions, solutions, and ideas with the Composable community.</p>
+    <hr>
+    <p>Need help? Start with <a href="https://github.com/orgs/ComposableAnalytics/discussions" target="_blank">Discussions</a> or Explore the <a href="https://docs.composable.ai" target="_blank">Composable Docs</a> or <a href="https://blog.composable.ai" target="_blank">Composable Blog</a> for more detailed guides.</p>
+    <a href="https://github.com/orgs/ComposableAnalytics/discussions/new" class="cta-button">
+      <i class="fa fa-pencil-alt"></i> Start a New Discussion
+    </a>
+  <div id="discussions-container">Loading discussions...</div>
+
+  <script>
+    const discussionsContainer = document.getElementById('discussions-container');
+    const apiUrl = 'https://api.github.com/repos/ComposableAnalytics/Docs/discussions';
+
+    fetch(apiUrl)
+      .then(response => response.json())
+      .then(data => {
+        discussionsContainer.innerHTML = '';
+        data.forEach(discussion => {
+          const div = document.createElement('div');
+          div.classList.add('discussion');
+          div.innerHTML = `
+            <div class="discussion-title">${discussion.title}</div>
+            <p>${discussion.body.slice(0, 100)}...</p>
+            <a href="${discussion.html_url}" target="_blank">View Discussion</a>
+          `;
+          discussionsContainer.appendChild(div);
+        });
+      })
+      .catch(err => {
+        console.error('Error fetching discussions:', err);
+        discussionsContainer.innerHTML = 'Failed to load discussions.';
+      });
+  </script>
 </body>
 </html>
