--- a/index.html
+++ b/index.html
@@ -60,3 +60,146 @@
   </script>
 </body>
 </html>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Composable Support - GitHub Discussions Forum</title>
+  <style>
+    /* Global styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #fff;
+      color: #333;
+    }
+
+    /* Topbar styling */
+    .topbar {
+      background-color: #000;
+      color: #fff;
+      padding: 10px 20px;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    /* Main container */
+    .container {
+      padding: 20px;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    /* Section titles */
+    h1 {
+      font-size: 24px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    /* Discussion card styles */
+    .discussion {
+      border: 1px solid #ddd;
+      border-radius: 5px;
+      padding: 15px;
+      margin-bottom: 15px;
+      background: #f9f9f9;
+      transition: box-shadow 0.3s ease-in-out;
+    }
+    .discussion:hover {
+      box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Discussion title */
+    .discussion-title {
+      font-weight: bold;
+      margin-bottom: 8px;
+      font-size: 18px;
+      color: #0074d9;
+      text-decoration: none;
+    }
+    .discussion-title:hover {
+      text-decoration: underline;
+    }
+
+    /* Discussion body preview */
+    .discussion-body {
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 10px;
+    }
+
+    /* View link */
+    .view-link {
+      font-size: 14px;
+      color: #0074d9;
+      text-decoration: none;
+    }
+    .view-link:hover {
+      text-decoration: underline;
+    }
+
+    /* Footer spacing */
+    footer {
+      margin-top: 20px;
+      text-align: center;
+      font-size: 14px;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <!-- Black topbar -->
+  <div class="topbar">Composable Support Forum</div>
+
+  <!-- Main container -->
+  <div class="container">
+    <!-- Header -->
+  <h1>Composable Support</h1>
+        <h2>GitHub Discussions</h2>
+    <p>Join the conversation in our GitHub Discussions support forum. Share questions, solutions, and ideas with the Composable community.</p>
+    <hr>
+    <!-- Discussions container -->
+    <div id="discussions-container">Loading discussions...</div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    Powered by <a href="https://github.com/ComposableAnalytics" target="_blank">Composable GitHub</a>.
+  </footer>
+
+  <script>
+    const discussionsContainer = document.getElementById('discussions-container');
+    const apiUrl = 'https://api.github.com/repos/ComposableAnalytics/Docs/discussions';
+
+    // Fetch and display discussions
+    fetch(apiUrl)
+      .then(response => response.json())
+      .then(data => {
+        discussionsContainer.innerHTML = '';
+        data.forEach(discussion => {
+          const div = document.createElement('div');
+          div.classList.add('discussion');
+          div.innerHTML = `
+            <a class="discussion-title" href="${discussion.html_url}" target="_blank">${discussion.title}</a>
+            <p class="discussion-body">${discussion.body.slice(0, 100)}...</p>
+            <a class="view-link" href="${discussion.html_url}" target="_blank">View Discussion</a>
+          `;
+          discussionsContainer.appendChild(div);
+        });
+      })
+      .catch(err => {
+        console.error('Error fetching discussions:', err);
+        discussionsContainer.innerHTML = 'Failed to load discussions. Please try again later.';
+      });
+  </script>
+</body>
+</html>
