--- a/index.html
+++ b/index.html
@@ -184,7 +184,9 @@
             <a href="https://www.linkedin.com/company/composable-analytics-inc-/" target="_blank" title="LinkedIn">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/linkedin.svg" alt="LinkedIn" class="icon">
             </a>
-
+            <a href="mailto:support@composable.ai" target="_blank" title="Mail">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/gmail.svg" alt="Mail" class="icon">
+            </a>
         </div>
     </div>
 
