--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 
         <script>
             const discussionsContainer = document.getElementById('discussions-container');
-            const apiUrl = 'https://api.github.com/repos/ComposableAnalytics/Docs/discussions';
+            const apiUrl = 'https://api.github.com/repos/ComposableAnalytics/Docs/discussions?sort=created&direction=desc';';
 
             // Fetch and display discussions
             fetch(apiUrl)
