--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Composable Support - GitHub Discussions Forum</title>
+    <link rel="icon" type="image/svg+xml" href="https://cdn.jsdelivr.net/npm/simple-icons/icons/github.svg">
     <style>
         /* Global styles */
         body {
@@ -217,35 +218,39 @@
         Copyright © 2025 <a href="https://composable.ai" target="_blank">Composable Analytics, Inc.</a>
     </footer>
 
-    <script>
-        const discussionsContainer = document.getElementById('discussions-container');
-        const apiUrl = 'https://api.github.com/repos/ComposableAnalytics/Docs/discussions?sort=created&direction=desc';
+<script>
+    const discussionsContainer = document.getElementById('discussions-container');
+    const apiUrl = 'https://api.github.com/repos/ComposableAnalytics/Docs/discussions';
 
-        // Fetch and display discussions
-        fetch(apiUrl)
-            .then(response => response.json())
-            .then(data => {
-                discussionsContainer.innerHTML = '';
-                data.forEach(discussion => {
-                    const createdAt = new Date(discussion.created_at).toLocaleDateString(); // Format date
-                    const author = discussion.user.login; // Get author username
+    fetch(apiUrl)
+        .then(response => response.json())
+        .then(data => {
+            discussionsContainer.innerHTML = '';
 
-                    const div = document.createElement('div');
-                    div.classList.add('discussion');
-                    div.innerHTML = `
-                        <a class="discussion-title" href="${discussion.html_url}" target="_blank">${discussion.title}</a>
-                        <p class="discussion-body">${discussion.body.slice(0, 100)}...</p>
-                        <p class="discussion-meta"><strong>Author:</strong> ${author} | <strong>Posted on:</strong> ${createdAt}</p>
-                        <a class="view-link" href="${discussion.html_url}" target="_blank">View Discussion</a>
-                    `;
-                    discussionsContainer.appendChild(div);
-                });
-            })
-            .catch(err => {
-                console.error('Error fetching discussions:', err);
-                discussionsContainer.innerHTML = 'Failed to load discussions. Please try again later.';
+            // Manually sort discussions in descending order (newest first)
+            data.sort((a, b) => new Date(b.created_at) - new Date(a.created_at));
+
+            data.forEach(discussion => {
+                const createdAt = new Date(discussion.created_at).toLocaleDateString();
+                const author = discussion.user.login;
+
+                const div = document.createElement('div');
+                div.classList.add('discussion');
+                div.innerHTML = `
+                    <a class="discussion-title" href="${discussion.html_url}" target="_blank">${discussion.title}</a>
+                    <p class="discussion-body">${discussion.body.slice(0, 100)}...</p>
+                    <p class="discussion-meta"><strong>Author:</strong> ${author} | <strong>Posted on:</strong> ${createdAt}</p>
+                    <a class="view-link" href="${discussion.html_url}" target="_blank">View Discussion</a>
+                `;
+                discussionsContainer.appendChild(div);
             });
-    </script>
+        })
+        .catch(err => {
+            console.error('Error fetching discussions:', err);
+            discussionsContainer.innerHTML = 'Failed to load discussions. Please try again later.';
+        });
+</script>
+
 </body>
 
 </html>
