--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
             margin-bottom: 10px;
         }
 
+        .discussion-meta a {
+            text-decoration: none; /* Removes underline */
+            color: inherit; /* Keeps the text color the same as surrounding text */
+        }
+
+        .discussion-meta a:hover {
+            text-decoration: underline; /* Optional: Underline on hover */
+        }
+
         /* View link */
         .view-link {
             font-size: 14px;
