--- a/index.html
+++ b/index.html
@@ -208,11 +208,15 @@
         <p>Join the conversation in our GitHub Discussions support forum. Share questions, solutions, and ideas with the Composable community.</p>
         <hr>
 
-        <!-- Post a Question Button -->
-        <div class="button-container">
+        <!-- Post a Question & View Discussions Buttons -->
+        <div class="button-container" style="display: flex; gap: 50px;">
             <a href="https://github.com/orgs/ComposableAnalytics/discussions/new" target="_blank" class="post-question-btn">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/github.svg" alt="GitHub" class="button-icon">
                 Post a Question
+            </a>
+            <a href="https://github.com/orgs/ComposableAnalytics/discussions" target="_blank" class="post-question-btn">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons/icons/github.svg" alt="GitHub" class="button-icon">
+                View Discussions
             </a>
         </div>
         <hr>
